--- a/desert-road.scss
+++ b/desert-road.scss
@@ -19,6 +19,7 @@ body{
     width: 100%;
     margin: 0;
     padding: 0;
+    position: relative;
     overflow: hidden;
 
     .sky{
@@ -143,6 +144,22 @@ body{
         justify-content: space-around;
         overflow: hidden;
         z-index: -1;
+    }
+
+    .cactus{
+        height: 10px;
+        width: 10px;
+        background-image: url(../img/cactus.svg);
+        position: absolute;
+        top: calc(50% - 10px);
+        left: 20%;
+        animation: MoveCactus 3s infinite;
+        overflow: hidden;
+    }
+
+    @keyframes MoveCactus {
+        0% { top: calc(50% - 10px); height: 10px; width:10px; left: 30%;}
+        100% { top: calc(110%); height: 100px; width:100px; left: 5%;}
     }
 
     .road{
