--- a/css/desert-road.css
+++ b/css/desert-road.css
@@ -1,9 +1,287 @@
-html,
-body {
+.main-container {
   height: 100%;
   width: 100%;
   margin: 0;
   padding: 0;
+  position: relative;
+  overflow: hidden;
+}
+
+.cactus {
+  background-image: url(../img/cactus.svg);
+  position: absolute;
+  overflow: hidden;
+}
+
+.cactus1 {
+  -webkit-animation: MoveCactus1 4s ease-in infinite;
+          animation: MoveCactus1 4s ease-in infinite;
+}
+
+.cactus2 {
+  -webkit-animation: MoveCactus2 4s infinite;
+          animation: MoveCactus2 4s infinite;
+}
+
+@media (max-width: 1023px) {
+  .cactus1 {
+    -webkit-animation: MoveCactusMobile1 5s infinite;
+            animation: MoveCactusMobile1 5s infinite;
+  }
+  .cactus2 {
+    -webkit-animation: MoveCactusMobile2 5s infinite;
+            animation: MoveCactusMobile2 5s infinite;
+  }
+}
+
+@-webkit-keyframes MoveCactus1 {
+  0% {
+    top: calc(40% - 10px);
+    height: 10px;
+    width: 10px;
+    left: 40%;
+  }
+  50% {
+    top: calc(120%);
+    height: 450px;
+    width: 450px;
+    left: -30%;
+  }
+  100% {
+    top: 200%;
+  }
+}
+
+@keyframes MoveCactus1 {
+  0% {
+    top: calc(40% - 10px);
+    height: 10px;
+    width: 10px;
+    left: 40%;
+  }
+  50% {
+    top: calc(120%);
+    height: 450px;
+    width: 450px;
+    left: -30%;
+  }
+  100% {
+    top: 200%;
+  }
+}
+
+@-webkit-keyframes MoveCactus2 {
+  0% {
+    height: 0px;
+  }
+  49% {
+    height: 0px;
+  }
+  50% {
+    top: calc(40% - 10px);
+    height: 10px;
+    width: 10px;
+    right: 40%;
+    display: block;
+  }
+  100% {
+    top: calc(120%);
+    height: 350px;
+    width: 350px;
+    right: -25%;
+  }
+}
+
+@keyframes MoveCactus2 {
+  0% {
+    height: 0px;
+  }
+  49% {
+    height: 0px;
+  }
+  50% {
+    top: calc(40% - 10px);
+    height: 10px;
+    width: 10px;
+    right: 40%;
+    display: block;
+  }
+  100% {
+    top: calc(120%);
+    height: 350px;
+    width: 350px;
+    right: -25%;
+  }
+}
+
+@-webkit-keyframes MoveCactusMobile1 {
+  0% {
+    top: calc(50% - 10px);
+    height: 10px;
+    width: 10px;
+    left: 30%;
+  }
+  50% {
+    top: calc(120%);
+    height: 80px;
+    width: 80px;
+    left: 2%;
+  }
+  100% {
+    top: 200%;
+  }
+}
+
+@keyframes MoveCactusMobile1 {
+  0% {
+    top: calc(50% - 10px);
+    height: 10px;
+    width: 10px;
+    left: 30%;
+  }
+  50% {
+    top: calc(120%);
+    height: 80px;
+    width: 80px;
+    left: 2%;
+  }
+  100% {
+    top: 200%;
+  }
+}
+
+@-webkit-keyframes MoveCactusMobile2 {
+  0% {
+    height: 0px;
+  }
+  49% {
+    height: 0px;
+  }
+  50% {
+    top: calc(50% - 10px);
+    height: 10px;
+    width: 10px;
+    right: 30%;
+    display: block;
+  }
+  100% {
+    top: calc(120%);
+    height: 80px;
+    width: 80px;
+    right: 2%;
+  }
+}
+
+@keyframes MoveCactusMobile2 {
+  0% {
+    height: 0px;
+  }
+  49% {
+    height: 0px;
+  }
+  50% {
+    top: calc(50% - 10px);
+    height: 10px;
+    width: 10px;
+    right: 30%;
+    display: block;
+  }
+  100% {
+    top: calc(120%);
+    height: 80px;
+    width: 80px;
+    right: 2%;
+  }
+}
+
+.cloud-container {
+  position: absolute;
+  top: 15%;
+  right: 5%;
+  -webkit-animation: MoveCloud 30s linear infinite;
+          animation: MoveCloud 30s linear infinite;
+}
+
+.cloud-container .cloud {
+  position: relative;
+  width: 140px;
+  height: 100px;
+}
+
+.cloud-container .cloud .cloud-bubble {
+  background-color: #ffffff;
+  position: absolute;
+}
+
+.cloud-container .cloud .cloud-bubble1 {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  z-index: 2;
+  bottom: 0;
+  left: -22px;
+}
+
+.cloud-container .cloud .cloud-bubble2 {
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+  z-index: 2;
+  bottom: 0;
+  right: -3px;
+}
+
+.cloud-container .cloud .cloud-bubble3 {
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  z-index: 2;
+  top: 7px;
+  right: 22px;
+}
+
+.cloud-container .cloud .cloud-bubble4 {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  z-index: 2;
+  top: 30px;
+  left: 9px;
+}
+
+.cloud-container .cloud .cloud-bubble5 {
+  width: 120px;
+  height: 40px;
+  z-index: 2;
+  bottom: 0px;
+}
+
+.cloud-container.little-cloud {
+  top: 16%;
+  -webkit-transform: scale(0.8);
+          transform: scale(0.8);
+}
+
+.cloud-container.little-cloud .cloud-bubble {
+  background-color: red;
+}
+
+@-webkit-keyframes MoveCloud {
+  0% {
+    right: -140px;
+  }
+  100% {
+    right: 100%;
+  }
+}
+
+@keyframes MoveCloud {
+  0% {
+    right: -140px;
+  }
+  100% {
+    right: 100%;
+  }
 }
 
 .main-container {
@@ -15,133 +293,7 @@ body {
   overflow: hidden;
 }
 
-.main-container .sky {
-  height: 40%;
-  width: 100%;
-  background-color: #228cdc;
-  -webkit-transition: background-color 3s;
-  transition: background-color 3s;
-  position: relative;
-  overflow: hidden;
-}
-
-.main-container .sky:hover {
-  background-color: #0c3858;
-}
-
-.main-container .sky:hover .stars-container {
-  -webkit-transform: rotate(90deg);
-          transform: rotate(90deg);
-}
-
-.main-container .sky:hover .stars-container .sun {
-  opacity: 0;
-}
-
-.main-container .sky:hover .stars-container .moon {
-  opacity: 1;
-}
-
-.main-container .sky:hover .stars {
-  opacity: 1;
-}
-
-.main-container .sky .mountains {
-  height: 100%;
-  width: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-
-.main-container .sky .mountains .mountain {
-  height: 100px;
-  width: 100px;
-  -webkit-transform: rotate(45deg);
-          transform: rotate(45deg);
-  background-color: #7d3a1a;
-  position: absolute;
-  bottom: -50px;
-}
-
-.main-container .sky .mountains .mountain:nth-child(1) {
-  left: 6%;
-  background-color: #a55936;
-  bottom: -55px;
-}
-
-.main-container .sky .mountains .mountain:nth-child(2) {
-  left: 2%;
-  height: 80px;
-}
-
-.main-container .sky .mountains .mountain:nth-child(3) {
-  height: 50px;
-  background-color: #a55936;
-  left: 4%;
-}
-
-.main-container .sky .mountains .mountain:nth-child(4) {
-  height: 170px;
-  width: 170px;
-  bottom: -100px;
-  left: 55%;
-}
-
-.main-container .sky .mountains .mountain:nth-child(5) {
-  height: 160px;
-  width: 160px;
-  bottom: -100px;
-  background-color: #a55936;
-  left: 50%;
-}
-
-.main-container .sky .stars-container {
-  height: 100%;
-  width: 100%;
-  -webkit-transform-origin: 50% 50%;
-          transform-origin: 50% 50%;
-  -webkit-transition: all 3s;
-  transition: all 3s;
-  position: relative;
-}
-
-.main-container .sky .stars-container .sun {
-  position: absolute;
-  top: 10%;
-  left: 20%;
-  width: 70px;
-  height: 70px;
-  border-radius: 50%;
-  background: white;
-  -webkit-box-shadow: 0px 0px 40px 15px white;
-          box-shadow: 0px 0px 40px 15px white;
-  -webkit-transform: rotate(180deg);
-          transform: rotate(180deg);
-  opacity: 1;
-  -webkit-transition: opacity 3s;
-  transition: opacity 3s;
-}
-
-.main-container .sky .stars-container .moon {
-  position: absolute;
-  top: -40%;
-  left: 35%;
-  height: 50px;
-  width: 50px;
-  background: radial-gradient(ellipse farthest-corner at 33% 75%, #7d3a1a 45%, #ffd67a 47%);
-  background-size: 150% 100%;
-  border-radius: 50%;
-  -webkit-transform: rotate(180deg);
-          transform: rotate(180deg);
-  -webkit-box-shadow: 0px 0px 40px 8px white;
-          box-shadow: 0px 0px 40px 8px white;
-  opacity: 0;
-  -webkit-transition: opacity 3s;
-  transition: opacity 3s;
-}
-
-.main-container .desert {
+.desert {
   height: 60%;
   width: 100%;
   background: -webkit-gradient(linear, left top, left bottom, from(#f7e251), to(#ffe424));
@@ -158,49 +310,71 @@ body {
   z-index: -1;
 }
 
-.main-container .cactus {
-  height: 10px;
-  width: 10px;
-  background-image: url(../img/cactus.svg);
+@media (max-width: 1023px) {
+  .desert {
+    height: 50%;
+  }
+}
+
+.mountains {
+  height: 100%;
+  width: 100%;
   position: absolute;
-  top: calc(50% - 10px);
-  left: 20%;
-  -webkit-animation: MoveCactus 3s infinite;
-          animation: MoveCactus 3s infinite;
-  overflow: hidden;
+  top: 0;
+  left: 0;
 }
 
-@-webkit-keyframes MoveCactus {
-  0% {
-    top: calc(50% - 10px);
-    height: 10px;
-    width: 10px;
-    left: 30%;
-  }
-  100% {
-    top: calc(110%);
-    height: 100px;
-    width: 100px;
-    left: 5%;
-  }
+.mountains .mountain {
+  height: 100px;
+  width: 100px;
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+  background-color: #7d3a1a;
+  position: absolute;
+  bottom: -50px;
 }
 
-@keyframes MoveCactus {
-  0% {
-    top: calc(50% - 10px);
-    height: 10px;
-    width: 10px;
-    left: 30%;
-  }
-  100% {
-    top: calc(110%);
-    height: 100px;
-    width: 100px;
-    left: 5%;
-  }
+.mountains .mountain:nth-child(1) {
+  left: 6%;
+  background-color: #a55936;
+  bottom: -55px;
 }
 
-.main-container .road {
+.mountains .mountain:nth-child(2) {
+  left: 2%;
+  height: 80px;
+}
+
+.mountains .mountain:nth-child(3) {
+  height: 50px;
+  background-color: #a55936;
+  left: 4%;
+}
+
+.mountains .mountain:nth-child(4) {
+  height: 170px;
+  width: 170px;
+  bottom: -100px;
+  left: 55%;
+}
+
+.mountains .mountain:nth-child(5) {
+  height: 160px;
+  width: 160px;
+  bottom: -100px;
+  background-color: #a55936;
+  left: 50%;
+}
+
+html,
+body {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+.road {
   position: absolute;
   width: 5%;
   height: 150%;
@@ -214,7 +388,15 @@ body {
   z-index: -1;
 }
 
-.main-container .road .line {
+@media (max-width: 1023px) {
+  .road {
+    height: 170%;
+    -webkit-transform: perspective(200px) rotateX(70deg);
+            transform: perspective(200px) rotateX(70deg);
+  }
+}
+
+.road .line {
   position: absolute;
   background: #fff;
   left: 45%;
@@ -223,7 +405,7 @@ body {
   width: 10%;
 }
 
-.main-container .road .line:nth-child(1) {
+.road .line:nth-child(1) {
   -webkit-animation: MoveLine1 1s linear infinite;
           animation: MoveLine1 1s linear infinite;
 }
@@ -246,7 +428,7 @@ body {
   }
 }
 
-.main-container .road .line:nth-child(2) {
+.road .line:nth-child(2) {
   -webkit-animation: MoveLine2 1s linear infinite;
           animation: MoveLine2 1s linear infinite;
 }
@@ -269,7 +451,7 @@ body {
   }
 }
 
-.main-container .road .line:nth-child(3) {
+.road .line:nth-child(3) {
   -webkit-animation: MoveLine3 1s linear infinite;
           animation: MoveLine3 1s linear infinite;
 }
@@ -292,7 +474,7 @@ body {
   }
 }
 
-.main-container .road .line:nth-child(4) {
+.road .line:nth-child(4) {
   -webkit-animation: MoveLine4 1s linear infinite;
           animation: MoveLine4 1s linear infinite;
 }
@@ -315,7 +497,7 @@ body {
   }
 }
 
-.main-container .road .line:nth-child(5) {
+.road .line:nth-child(5) {
   -webkit-animation: MoveLine5 1s linear infinite;
           animation: MoveLine5 1s linear infinite;
 }
@@ -338,7 +520,7 @@ body {
   }
 }
 
-.main-container .road .line:nth-child(6) {
+.road .line:nth-child(6) {
   -webkit-animation: MoveLine6 1s linear infinite;
           animation: MoveLine6 1s linear infinite;
 }
@@ -361,7 +543,7 @@ body {
   }
 }
 
-.main-container .road .line:nth-child(7) {
+.road .line:nth-child(7) {
   -webkit-animation: MoveLine7 1s linear infinite;
           animation: MoveLine7 1s linear infinite;
 }
@@ -384,7 +566,7 @@ body {
   }
 }
 
-.main-container .road .line:nth-child(8) {
+.road .line:nth-child(8) {
   -webkit-animation: MoveLine8 1s linear infinite;
           animation: MoveLine8 1s linear infinite;
 }
@@ -407,7 +589,7 @@ body {
   }
 }
 
-.main-container .road .line:nth-child(9) {
+.road .line:nth-child(9) {
   -webkit-animation: MoveLine9 1s linear infinite;
           animation: MoveLine9 1s linear infinite;
 }
@@ -430,7 +612,7 @@ body {
   }
 }
 
-.main-container .road .line:nth-child(10) {
+.road .line:nth-child(10) {
   -webkit-animation: MoveLine10 1s linear infinite;
           animation: MoveLine10 1s linear infinite;
 }
@@ -453,33 +635,119 @@ body {
   }
 }
 
-.main-container .speed-buttons {
+.sky {
+  height: 40%;
+  width: 100%;
+  background-color: #228cdc;
+  -webkit-transition: background-color 3s;
+  transition: background-color 3s;
+  position: relative;
+  overflow: hidden;
+}
+
+@media (max-width: 1023px) {
+  .sky {
+    height: 50%;
+  }
+}
+
+.sky:hover {
+  background-color: #0c3858;
+}
+
+.sky:hover .stars-container {
+  -webkit-transform: rotate(90deg);
+          transform: rotate(90deg);
+}
+
+.sky:hover .stars-container .sun {
+  opacity: 0;
+}
+
+.sky:hover .stars-container .moon {
+  opacity: 1;
+}
+
+.sky:hover .stars {
+  opacity: 1;
+}
+
+.sky .stars-container {
+  height: 100%;
+  width: 100%;
+  -webkit-transform-origin: 50% 50%;
+          transform-origin: 50% 50%;
+  -webkit-transition: all 3s;
+  transition: all 3s;
+  position: relative;
+}
+
+.sky .stars-container .sun {
+  position: absolute;
+  top: 10%;
+  left: 20%;
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  background: white;
+  -webkit-box-shadow: 0px 0px 40px 15px white;
+          box-shadow: 0px 0px 40px 15px white;
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
+  opacity: 1;
+  -webkit-transition: opacity 3s;
+  transition: opacity 3s;
+}
+
+.sky .stars-container .moon {
+  position: absolute;
+  top: -40%;
+  left: 35%;
+  height: 50px;
+  width: 50px;
+  background: radial-gradient(ellipse farthest-corner at 33% 75%, #7d3a1a 45%, #ffd67a 47%);
+  background-size: 150% 100%;
+  border-radius: 50%;
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
+  -webkit-box-shadow: 0px 0px 40px 8px white;
+          box-shadow: 0px 0px 40px 8px white;
+  opacity: 0;
+  -webkit-transition: opacity 3s;
+  transition: opacity 3s;
+}
+
+.speed-buttons {
   position: absolute;
   bottom: 50px;
   right: 50px;
 }
 
-.main-container .speed-buttons .speedup,
-.main-container .speed-buttons .slowdown {
+.speed-buttons .speedup,
+.speed-buttons .slowdown {
   position: relative;
   height: 50px;
   width: 50px;
-  background-color: lightgrey;
+  background-color: #f5dc2c;
   border-radius: 50%;
   border: 1px solid transparent;
-  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
-          box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: 0 2px 1px rgba(0, 0, 0, 0.1);
+          box-shadow: 0 2px 1px rgba(0, 0, 0, 0.1);
   cursor: pointer;
+  -webkit-transition: -webkit-box-shadow .2s ease-in-out;
+  transition: -webkit-box-shadow .2s ease-in-out;
+  transition: box-shadow .2s ease-in-out;
+  transition: box-shadow .2s ease-in-out, -webkit-box-shadow .2s ease-in-out;
 }
 
-.main-container .speed-buttons .speedup:hover,
-.main-container .speed-buttons .slowdown:hover {
+.speed-buttons .speedup:hover,
+.speed-buttons .slowdown:hover {
   -webkit-box-shadow: none;
           box-shadow: none;
 }
 
-.main-container .speed-buttons .speedup::before,
-.main-container .speed-buttons .slowdown::before {
+.speed-buttons .speedup::before,
+.speed-buttons .slowdown::before {
   font-size: 30px;
   font-weight: bold;
   height: 100%;
@@ -494,34 +762,16 @@ body {
           justify-content: center;
 }
 
-.main-container .speed-buttons .speedup {
+.speed-buttons .speedup {
   margin-bottom: 10px;
 }
 
-.main-container .speed-buttons .speedup::before {
+.speed-buttons .speedup::before {
   content: "+";
 }
 
-.main-container .speed-buttons .slowdown::before {
+.speed-buttons .slowdown::before {
   content: "-";
-}
-
-@media (max-width: 1023px) {
-  .main-container .sky {
-    height: 50%;
-  }
-  .main-container .sky .stars-container {
-    -webkit-transform-origin: 75% 50%;
-            transform-origin: 75% 50%;
-  }
-  .main-container .desert {
-    height: 50%;
-  }
-  .main-container .road {
-    height: 170%;
-    -webkit-transform: perspective(200px) rotateX(70deg);
-            transform: perspective(200px) rotateX(70deg);
-  }
 }
 
 .stars {
