added a moving car

--- a/sass/desert-road.scss
+++ b/sass/desert-road.scss
@@ -15,6 +15,7 @@ $largeDesktop: "(min-width: 1920px)";
 }
 
 @import 'cactus';
+@import 'car';
 @import 'cloud';
 @import 'container';
 @import 'desert';
