--- a/css/desert-road.css
+++ b/css/desert-road.css
@@ -19,8 +19,8 @@
 }
 
 .cactus2 {
-  -webkit-animation: MoveCactus2 4s infinite;
-          animation: MoveCactus2 4s infinite;
+  -webkit-animation: MoveCactus2 4s ease-in infinite;
+          animation: MoveCactus2 4s ease-in infinite;
 }
 
 @media (max-width: 1023px) {
@@ -41,6 +41,12 @@
     width: 10px;
     left: 40%;
   }
+  35% {
+    top: 40%;
+    height: 30px;
+    width: 30px;
+    left: 37%;
+  }
   50% {
     top: calc(120%);
     height: 450px;
@@ -58,6 +64,12 @@
     height: 10px;
     width: 10px;
     left: 40%;
+  }
+  35% {
+    top: 40%;
+    height: 30px;
+    width: 30px;
+    left: 37%;
   }
   50% {
     top: calc(120%);
@@ -84,6 +96,12 @@
     right: 40%;
     display: block;
   }
+  85% {
+    top: 40%;
+    height: 30px;
+    width: 30px;
+    right: 37%;
+  }
   100% {
     top: calc(120%);
     height: 350px;
@@ -105,6 +123,12 @@
     width: 10px;
     right: 40%;
     display: block;
+  }
+  85% {
+    top: 40%;
+    height: 30px;
+    width: 30px;
+    right: 37%;
   }
   100% {
     top: calc(120%);
@@ -191,6 +215,40 @@
     height: 100px;
     width: 100px;
     right: -30%;
+  }
+}
+
+.car-container {
+  width: 12%;
+  position: absolute;
+  bottom: 50px;
+  left: 52%;
+  -webkit-animation: MoveCar .3s linear infinite;
+          animation: MoveCar .3s linear infinite;
+  -webkit-transition: all .5s ease-in-out;
+  transition: all .5s ease-in-out;
+}
+
+.car {
+  height: 100%;
+  width: 100%;
+}
+
+@-webkit-keyframes MoveCar {
+  0% {
+    bottom: 50px;
+  }
+  100% {
+    bottom: 53px;
+  }
+}
+
+@keyframes MoveCar {
+  0% {
+    bottom: 50px;
+  }
+  100% {
+    bottom: 53px;
   }
 }
 
@@ -632,6 +690,29 @@ body {
   }
   100% {
     top: 100%;
+  }
+}
+
+.car-container {
+  width: 12%;
+  position: absolute;
+  bottom: 50px;
+  left: 52%;
+  -webkit-animation: MoveCar .3s linear infinite;
+          animation: MoveCar .3s linear infinite;
+}
+
+.car {
+  height: 100%;
+  width: 100%;
+}
+
+@keyframes MoveCar {
+  0% {
+    bottom: 50px;
+  }
+  100% {
+    bottom: 53px;
   }
 }
 
