--- a/sass/_cactus.scss
+++ b/sass/_cactus.scss
@@ -9,7 +9,7 @@
 }
 
 .cactus2{
-    animation: MoveCactus2 4s infinite;
+    animation: MoveCactus2 4s ease-in infinite;
 }
 
 @media #{$mobile} {
@@ -28,6 +28,12 @@
         height: 10px; 
         width:10px; 
         left: 40%;
+    } 
+    35% { 
+        top: 40%; 
+        height: 30px; 
+        width:30px; 
+        left: 37%;
     }
     50% { 
         top: calc(120%); 
@@ -53,6 +59,12 @@
         width:10px; 
         right: 40%;
         display: block;
+    }
+    85% { 
+        top: 40%; 
+        height: 30px; 
+        width:30px; 
+        right: 37%;
     }
     100% { 
         top: calc(120%); 
