--- a/sass/_road.scss
+++ b/sass/_road.scss
@@ -30,8 +30,26 @@
         }
         
         @keyframes MoveLine#{$i+1} {
-            0% { top: #{-10%+ $i * 10%};; }
+            0% { top: #{-10%+ $i * 10%}; }
             100% { top: #{10% + $i * 10%}; }
         }
     }
+}
+
+.car-container{
+    width: 12%;
+    position: absolute;
+    bottom: 50px;
+    left: 52%;
+    animation: MoveCar .3s linear infinite;
+}
+
+.car{
+    height: 100%;
+    width: 100%;    
+}
+
+@keyframes MoveCar {
+    0% { bottom: 50px; }
+    100% { bottom: 53px; }
 }
