--- a/css/desert-road.css
+++ b/css/desert-road.css
@@ -222,11 +222,9 @@
   width: 12%;
   position: absolute;
   bottom: 50px;
-  left: 52%;
+  left: 45%;
   -webkit-animation: MoveCar .3s linear infinite;
           animation: MoveCar .3s linear infinite;
-  -webkit-transition: all .5s ease-in-out;
-  transition: all .5s ease-in-out;
 }
 
 .car {
@@ -250,6 +248,161 @@
   100% {
     bottom: 53px;
   }
+}
+
+.smoke {
+  position: absolute;
+  z-index: 3;
+  width: 1px;
+  height: 160px;
+  bottom: 25px;
+}
+
+.smoke.left {
+  left: 17%;
+}
+
+.smoke.right {
+  right: 38%;
+}
+
+.smoke span {
+  display: block;
+  position: absolute;
+  bottom: -50px;
+  height: 0px;
+  width: 0px;
+  border: 35px solid #4b4b4b;
+  border-radius: 35px;
+  left: -14px;
+  opacity: 0;
+  -webkit-transform: scale(0.2);
+          transform: scale(0.2);
+}
+
+@media (max-width: 1023px) {
+  .smoke span {
+    bottom: -32px;
+    border: 17px solid #4b4b4b;
+  }
+}
+
+/* Smoke animation */
+@-webkit-keyframes smokeL {
+  0% {
+    -webkit-transform: scale(0.2) translate(0, 0);
+            transform: scale(0.2) translate(0, 0);
+  }
+  10% {
+    opacity: 1;
+    -webkit-transform: scale(0.2) translate(0, 5px);
+            transform: scale(0.2) translate(0, 5px);
+  }
+  100% {
+    opacity: 0;
+    -webkit-transform: scale(1) translate(-20px, 130px);
+            transform: scale(1) translate(-20px, 130px);
+  }
+}
+@keyframes smokeL {
+  0% {
+    -webkit-transform: scale(0.2) translate(0, 0);
+            transform: scale(0.2) translate(0, 0);
+  }
+  10% {
+    opacity: 1;
+    -webkit-transform: scale(0.2) translate(0, 5px);
+            transform: scale(0.2) translate(0, 5px);
+  }
+  100% {
+    opacity: 0;
+    -webkit-transform: scale(1) translate(-20px, 130px);
+            transform: scale(1) translate(-20px, 130px);
+  }
+}
+
+@-webkit-keyframes smokeR {
+  0% {
+    -webkit-transform: scale(0.2) translate(0, 0);
+            transform: scale(0.2) translate(0, 0);
+  }
+  10% {
+    opacity: 1;
+    -webkit-transform: scale(0.2) translate(0, 5px);
+            transform: scale(0.2) translate(0, 5px);
+  }
+  100% {
+    opacity: 0;
+    -webkit-transform: scale(1) translate(20px, 130px);
+            transform: scale(1) translate(20px, 130px);
+  }
+}
+
+@keyframes smokeR {
+  0% {
+    -webkit-transform: scale(0.2) translate(0, 0);
+            transform: scale(0.2) translate(0, 0);
+  }
+  10% {
+    opacity: 1;
+    -webkit-transform: scale(0.2) translate(0, 5px);
+            transform: scale(0.2) translate(0, 5px);
+  }
+  100% {
+    opacity: 0;
+    -webkit-transform: scale(1) translate(20px, 130px);
+            transform: scale(1) translate(20px, 130px);
+  }
+}
+
+.smoke span:nth-child(1) {
+  -webkit-animation: smokeL 5s 0s infinite;
+          animation: smokeL 5s 0s infinite;
+}
+
+.smoke span:nth-child(3) {
+  -webkit-animation: smokeL 5s 1s infinite;
+          animation: smokeL 5s 1s infinite;
+}
+
+.smoke span:nth-child(2) {
+  -webkit-animation: smokeR 5s .5s infinite;
+          animation: smokeR 5s .5s infinite;
+}
+
+.smoke span:nth-child(4) {
+  -webkit-animation: smokeR 5s 1.5s infinite;
+          animation: smokeR 5s 1.5s infinite;
+}
+
+.smoke span:nth-child(5) {
+  -webkit-animation: smokeL 5s 2s infinite;
+          animation: smokeL 5s 2s infinite;
+}
+
+.smoke span:nth-child(6) {
+  -webkit-animation: smokeR 5s 2.5s infinite;
+          animation: smokeR 5s 2.5s infinite;
+}
+
+.smoke span:nth-child(7) {
+  -webkit-animation: smokeL 5s 3s infinite;
+          animation: smokeL 5s 3s infinite;
+}
+
+.smoke span:nth-child(8) {
+  -webkit-animation: smokeR 5s 3.5s infinite;
+          animation: smokeR 5s 3.5s infinite;
+}
+
+.smoke span:nth-child(9) {
+  -webkit-animation: smokeL 5s 4s infinite;
+          animation: smokeL 5s 4s infinite;
+}
+
+.smoke span:nth-child(10) {
+  -webkit-animation: smokeR 5s 4.5s infinite;
+          animation: smokeR 5s 4.5s infinite;
 }
 
 .cloud-container {
