--- a/sass/desert-road.scss
+++ b/sass/desert-road.scss
@@ -24,4 +24,4 @@ $largeDesktop: "(min-width: 1920px)";
 @import 'road';
 @import 'sky';
 @import 'speed-buttons';
-@import 'stars';
+//@import 'stars';
