--- a/sass/_mountains.scss
+++ b/sass/_mountains.scss
@@ -1,44 +1,10 @@
 .mountains{
-    height: 100%;
+    height: 40%;
     width: 100%;
     position: absolute;
-    top: 0;
+    bottom: 0;
     left: 0;
-
-    .mountain{
-        height: 100px;
-        width: 100px;
-        transform: rotate(45deg);
-        background-color: #7d3a1a;
-        position: absolute;
-        bottom: -50px;
-    }
-
-    .mountain:nth-child(1){
-        left: 6%;
-        background-color: #a55936;
-        bottom: -55px;
-    }
-    .mountain:nth-child(2){
-        left: 2%;
-        height: 80px;
-    }
-    .mountain:nth-child(3){
-        height: 50px;
-        background-color: #a55936;
-        left: 4%;
-    }
-    .mountain:nth-child(4){
-        height: 170px;
-        width: 170px;
-        bottom: -100px;
-        left: 55%;
-    }
-    .mountain:nth-child(5){
-        height: 160px;
-        width: 160px;
-        bottom: -100px;
-        background-color: #a55936;
-        left: 50%;
-    }
+    background-image: url('../img/moutains.png');
+    background-size: cover;
+    background-repeat-x: repeat;
 }
