--- a/sass/_stars.scss
+++ b/sass/_stars.scss
@@ -1,19 +1,7 @@
 .stars {
     position: absolute;
     width: 100%;
-    height: 450px;
-    /* The dark blue to slightly-less-dark blue gradient */
-    background-color: #032a54;
-    background-repeat: repeat-x;
-    background-image: -khtml-gradient(linear, left top, left bottom, from(#011428), to(#032a54));
-    background-image: -moz-linear-gradient(top, #011428, #032a54);
-    background-image: -ms-linear-gradient(top, #011428, #032a54);
-    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #011428), color-stop(100%, #032a54));
-    background-image: -webkit-linear-gradient(top, #011428, #032a54);
-    background-image: -o-linear-gradient(top, #011428, #032a54);
-    background-image: linear-gradient(top, #011428, #032a54);
-    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#011428', endColorstr='#032a54', GradientType=0);
-    margin-bottom: 10px;
+    height: 100%;
     opacity: 0;
     transition: all 3s;
 }
