--- a/sass/_speed-buttons.scss
+++ b/sass/_speed-buttons.scss
@@ -8,7 +8,7 @@
         position: relative;
         height: 50px;
         width: 50px;
-        background-color: #f5dc2c;
+        background-color: #ffee75;
         border-radius: 50%;
         border: 1px solid transparent;
         box-shadow: 0 2px 1px rgba(0,0,0,.1);
