--- a/css/desert-road.css
+++ b/css/desert-road.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 .main-container {
   height: 100%;
   width: 100%;
@@ -570,8 +571,8 @@
 }
 
 .help-bubble::before {
-  content: 'x';
-  font-size: 18px;
+  content: '✖';
+  font-size: 14px;
   position: absolute;
   top: 5px;
   right: 9px;
@@ -600,18 +601,24 @@
   border-bottom: 20px solid #d73030;
 }
 
-.help-1 {
-  height: 120px;
+.help-bubble p {
+  margin: 6px 0;
 }
 
-.help-1 .arrow-keys {
+.help-car {
+  position: absolute;
+  top: -130px;
+  right: -240px;
+}
+
+.help-car .arrow-keys {
   width: 110px;
   height: 45px;
   position: relative;
   margin: 0 auto;
 }
 
-.help-1 .arrow-keys .arrow-key {
+.help-car .arrow-keys .arrow-key {
   width: 50px;
   height: 35px;
   background-color: #333;
@@ -630,12 +637,25 @@
   transition: none;
 }
 
-.help-1 .arrow-keys .arrow-key.right {
+.help-car .arrow-keys .arrow-key.right {
   animation: KeyPressed 2s reverse infinite step-end;
 }
 
-.help-2 {
-  height: 65px;
+.help-sky {
+  padding-top: 65px;
+}
+
+.help-sky .cursor-hand {
+  width: 47px;
+  height: 60px;
+  background-image: url(../img/cursor-hand.png);
+  background-size: cover;
+  margin: 0 auto;
+  top: 10px;
+  left: calc(50% - 23px);
+  position: absolute;
+  -webkit-animation: MoveCursor 1s ease-in-out infinite;
+          animation: MoveCursor 1s ease-in-out infinite;
 }
 
 @-webkit-keyframes KeyPressed {
@@ -677,6 +697,60 @@
             box-shadow: none;
     background: #2a2a2a;
     color: lightgray;
+  }
+}
+
+@-webkit-keyframes MoveCursor {
+  0% {
+    top: 3px;
+    left: calc(50% - 25px);
+  }
+  20% {
+    top: 5px;
+    left: calc(50% - 25px);
+  }
+  40% {
+    top: 3px;
+    left: calc(50% - 21px);
+  }
+  60% {
+    top: 5px;
+    left: calc(50% - 21px);
+  }
+  80% {
+    top: 4px;
+    left: calc(50% - 23px);
+  }
+  100% {
+    top: 3px;
+    left: calc(50% - 25px);
+  }
+}
+
+@keyframes MoveCursor {
+  0% {
+    top: 3px;
+    left: calc(50% - 25px);
+  }
+  20% {
+    top: 5px;
+    left: calc(50% - 25px);
+  }
+  40% {
+    top: 3px;
+    left: calc(50% - 21px);
+  }
+  60% {
+    top: 5px;
+    left: calc(50% - 21px);
+  }
+  80% {
+    top: 4px;
+    left: calc(50% - 23px);
+  }
+  100% {
+    top: 3px;
+    left: calc(50% - 25px);
   }
 }
 
@@ -1022,8 +1096,6 @@ body {
   background: white;
   -webkit-box-shadow: 0px 0px 40px 15px white;
           box-shadow: 0px 0px 40px 15px white;
-  -webkit-transform: rotate(180deg);
-          transform: rotate(180deg);
   opacity: 1;
   -webkit-transition: opacity 3s;
   transition: opacity 3s;
