--- a/sass/_help.scss
+++ b/sass/_help.scss
@@ -15,7 +15,8 @@
     vertical-align: middle;
     font-size: 30px;
     font-weight: 600;
-    
+    user-select: none;
+
     &:hover{
         box-shadow: none;
     }
@@ -32,6 +33,7 @@
     padding: 10px;
     text-align: center;
     font-weight: 600;
+    z-index: 10;
 
     &::before{
         content: '✖';
@@ -105,10 +107,10 @@
 }
 
 .help-sky{
-    padding-top: 65px;
+    padding-top: 60px;
     .cursor-hand{
-        width: 47px;
-        height: 60px;
+        width: 38px;
+        height: 49px;
         background-image: url(../img/cursor-hand.png);
         background-size: cover;
         margin: 0 auto;
@@ -139,27 +141,27 @@
 
 @keyframes MoveCursor {
     0% {
-        top: 3px;
+        top: 6px;
         left: calc(50% - 25px);
     }
     20% {
-        top: 5px;
+        top: 10px;
         left: calc(50% - 25px);
     }
     40% {
-        top: 3px;
+        top: 6px;
         left: calc(50% - 21px);
     }
     60% {
-        top: 5px;
+        top: 10px;
         left: calc(50% - 21px);
     }
     80% {
-        top: 4px;
+        top: 8px;
         left: calc(50% - 23px);
     }
     100% {
-        top: 3px;
+        top: 6px;
         left: calc(50% - 25px);
     }
 }
