--- a/sass/_sky.scss
+++ b/sass/_sky.scss
@@ -52,6 +52,7 @@
             box-shadow: 0px 0px 40px 15px white;  
             opacity: 1;
             transition: opacity 3s;
+            animation: SunGlow .5s ease-in-out infinite;
         }
 
         .moon { 
@@ -69,4 +70,10 @@
             transition: opacity 3s;
         }
     }        
+}
+
+@keyframes SunGlow {
+    0% { box-shadow: 0px 0px 40px 14px white; }
+    50% { box-shadow: 0px 0px 40px 15px white; }
+    100% { box-shadow: 0px 0px 40px 14px white; }
 }
